Added live hour.

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
             <section>
                 <ul>
                     <li>
-                        <button type="reset" onclick="location.href='https://github.com/ca2los/flexbox'">GitHub Repository</button>
+                        <button type="reset" onclick="location.href='https://ca2los.github.io/agenda/'">GitHub Repository</button>
                     </li>
                 </ul>
             </section>
         </header>
 
         <main>
+            <section id="time-display"></section>
             <table>
                 <thead>
                     <tr>
@@ -103,7 +104,7 @@
                     </tr>
                     <tr class="form-list">
                         <th id="by_hour_15" class="by_hour">15:00</th>
-                        <th contenteditable="true" id="by_info_15" class="by_info"></th>
+                        <th contenteditable="true" id="by_info_15" class="by_info">Enter text...</th>
                         <th class="btn_group">
                             <button class="save_item save_item_15">💾</button>
                             <button class="remove_item">❌</button>
@@ -137,7 +138,7 @@
                     </tr>
                     <tr class="form-list">
                         <th id="by_hour_19" class="by_hour">19:00</th>
-                        <th contenteditable="true" id="by_info_19" class="by_info"></th>
+                        <th contenteditable="true" id="by_info_19" class="by_info">Enter text...</th>
                         <th class="btn_group">
                             <button class="save_item save_item_19">💾</button>
                             <button class="remove_item">❌</button>
@@ -145,7 +146,7 @@
                     </tr>
                     <tr class="form-list">
                         <th id="by_hour_20" class="by_hour">20:00</th>
-                        <th contenteditable="true" id="by_info_20" class="by_info"></th>
+                        <th contenteditable="true" id="by_info_20" class="by_info">Enter text...</th>
                         <th class="btn_group">
                             <button class="save_item save_item_20">💾</button>
                             <button class="remove_item">❌</button>
@@ -153,7 +154,7 @@
                     </tr>
                     <tr class="form-list">
                         <th id="by_hour_21" class="by_hour">21:00</th>
-                        <th contenteditable="true" id="by_info_21" class="by_info"></th>
+                        <th contenteditable="true" id="by_info_21" class="by_info">Enter text...</th>
                         <th class="btn_group">
                             <button class="save_item save_item_21">💾</button>
                             <button class="remove_item">❌</button>
@@ -178,7 +179,7 @@
                 </section>
                 <section class="columns">
                     <h1><a href="https://github.com/ca2los" target="_blank">ca2los</a></h1>
-                    <button type="reset" onclick="location.href='https://ca2los.github.io/quiz/'">GitHub Repository</button>
+                    <button type="reset" onclick="location.href='https://ca2los.github.io/agenda/'">GitHub Repository</button>
                     <p><strong>Description:</strong> Figuring out...</p>
                 </section>
             </section>
