Added live hour.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section>
                 <ul>
                     <li>
-                        <a href="https://github.com/ca2los">
+                        <a href="https://github.com/ca2los/agenda">
                             <img src="./img/github_icon_black.png" alt="GitHub Logo"/>
                         </a>
                     </li>
@@ -179,7 +179,7 @@
                 </section>
                 <section class="columns">
                     <h1><a href="https://github.com/ca2los" target="_blank">ca2los</a></h1>
-                    <button type="reset" onclick="location.href='https://ca2los.github.io/agenda/'">GitHub Repository</button>
+                    <button type="reset" onclick="location.href='https://github.com/ca2los/agenda'">GitHub Repository</button>
                     <p><strong>Description:</strong> Figuring out...</p>
                 </section>
             </section>
