Added live hour.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </li>
                     <li>
                         <p>
-                            <a href="https://ca2los.github.io/quiz/">/ca2los</a>
+                            <a href="https://github.com/ca2los/agenda">/ca2los</a>
                         </p>
                     </li>
                 </ul>
