Added live hour.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <section>
                 <ul>
                     <li>
-                        <button type="reset" onclick="location.href='https://ca2los.github.io/agenda/'">GitHub Repository</button>
+                        <button type="reset" onclick="location.href='https://github.com/ca2los/agenda'">GitHub Repository</button>
                     </li>
                 </ul>
             </section>
